k8/k8-basic-example/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /enroll
            pathType: Prefix
            backend:
              service:
                name: enrollment-service
                port:
                  number: 80
